@@ -1,3 +1,5 @@
+* BUG#8842 Do not store the formatted context if debug mode is not on
+
 Version 2.0 - 2018-04-13
 * BUG#8326 To be able to retrieve the good value of field selection in rule parameters
 * FEA#8149 Add history on rules to consult different versions
